# Project-Swarm

./: .gitmodules  CMakeLists.txt  README.md  SDsetup.sh  install_octomap.txt  installing_hdl_graph_slam.txt  installing_hector_quadrotor  installing_moveit.txt  installing_velodyne_sensor.txt  launch_order.txt  package.xml
PathfindingPrototyping/: demo.py  mapgen.py  quadtree.py  thetastar.py
bb_8_description/robots/: bb_8.gazebo.xacro  bb_8.urdf
launch/: bb8.launch  bb8_and_world.launch  bb8_hiding1.launch  bb8_hiding2.launch  bb8_hiding3.launch  explore_costmap.launch  hdl_graph_slam.launch  move_base_namespace_2d.launch  multi_explore.launch  multi_move_base.launch  multi_move_base_2d.launch  multi_quadrotor_2d.launch  multi_quadrotor_spawn.launch  multi_slam_2d.launch  multi_slam_octo.launch  only_bb8.launch  only_world.launch  quadrotor.launch  quadrotor_move_base.launch  quadrotor_slam.launch  single_multi_explore.launch  single_multi_move_base.launch  single_multi_quadrotor_spawn.launch  single_multi_slam_octo.launch  slam_2d.launch  spawn_bb8.launch  spawn_quadrotor_hdl32e.launch  spawn_quadrotor_hokuyo.launch  start_slam_octomap.launch  start_slam_octomap_2dnav.launch
launch/src/: master_swarm.py  navigate.py  navigate_and_explore.py
move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
move_base_config_2d/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
replace_stuff_folder/hector_quadrotor_noetic/demo/: put_robot_in_world.launch  readme.txt
replace_stuff_folder/hector_quadrotor_noetic/demo/src/: opencv-camera.py  opencv-takePicture.py  yolov5_detection.py
replace_stuff_folder/hector_quadrotor_noetic/description/: quadrotor_hokuyo_utm30lx.urdf.xacro  readme.txt
replace_stuff_folder/hector_quadrotor_noetic/gazebo/: readme.txt  spawn_five_quadrotors.launch
replace_stuff_folder/hector_quadrotor_noetic/gazebo/launch/: final_five_spawn.launch  final_single_spawn.launch
replace_stuff_folder/hector_quadrotor_noetic/gazebo/src/: master_detection.py  object_detection_node.py  opencv-camera.py  opencv-camera1.py  opencv-camera2.py  opencv-camera3.py  opencv-camera4.py  opencv-camera5.py  yolov5_detection.py
replace_stuff_folder/hector_quadrotor_noetic/gazebo/urdf/: quadrotor_sensors.gazebo.xacro
rviz_cfg/: 2d_lidar.rviz  2dnav.rviz  3d_lidar.rviz  multirobot.rviz
src/: arise.py  begin_arise.py  clock.py  example_YOLO.py  five_drone_rails.py  launchOrder.txt  master_detection.py  opencv-camera.py  opencv-camera1.py  single_drone_rails.py  single_drone_rails1.py  single_drone_rails2.py  single_drone_rails3.py  single_drone_rails4.py  single_drone_rails5.py  train_station.py  yolov5_detection.py
urdf/: bb8_1.urdf  bb8_2.urdf  quadrotor_hdl32e.gazebo.xacro  quadrotor_hdl32e.urdf.xacro
